crates/aranya-policy-compiler/tests/data/commands/no_return_in_seal.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: pure function has no return statement
  |
3 |     seal { let x = 3 }
  |            ^^^^^^^^^^ No return found in this function body
